Fix missing spaces between breadcrumb elements

--- a/sass/navigation/_breadcrumbs.scss
+++ b/sass/navigation/_breadcrumbs.scss
@@ -26,4 +26,8 @@ $breadcrumbs-height: 56px;
       }
     }
   }
+
+  >* {
+    margin: 0 5px;
+  }
 }
